tests/reference/asr-expr16-a3dc453.stderr
semantic error: Type mismatch in shorthand operator, the types must be compatible
 --> tests/expr16.py:6:9
  |
6 |         sum += data[i]
  |         ^^^    ^^^^^^^ type mismatch ('f64' and 'i32')


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
